# napi-reference

./: Cargo.toml  index.d.ts  index.js  package.json  test.js
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: async_fn.rs  class.rs  deadlock.rs  external.rs  external_value.rs  lib.rs  nested_call.rs  reference.rs  reference_callback.rs  rspack.rs  tsfn.rs  value.rs
tests/: basic.js  basic2.js  deadlock.js  test.js
