[package]
edition = "2021"
name = "napi-reference"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.218"}
serde_derive = { version = "1.0.218"}
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-alpha.28", default-features = false, features = ["napi9", "serde-json", "tokio", "tokio_rt", "async"] }
napi-derive = "3.0.0-alpha.28"
tokio = { version = "1.43.0", features = ["full"] }

[build-dependencies]
napi-build = "2.1.4"

[profile.release]
lto = true
strip = "symbols"
